// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp snapshot 1`] = `
Object {
  "default": undefined,
  "displayName": "Grantee",
  "docs": Object {},
  "fqn": "Amazon.CDK.AWS.ECR.AuthorizationToken.GrantRead.parameter.Grantee",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
  "optional": undefined,
  "type": Object {
    "formattingPattern": "%",
    "types": Array [
      Object {
        "displayName": "IGrantable",
        "fqn": "Amazon.CDK.AWS.IAM.IGrantable",
        "id": "@aws-cdk/aws-iam.IGrantable",
        "packageName": "@aws-cdk/aws-iam",
        "packageVersion": "1.106.0",
        "submodule": undefined,
      },
    ],
  },
}
`;

exports[`csharp snapshot 2`] = `
" \`Grantee\`<sup>Required</sup> <a name=\\"Grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee\\"></a>

- *Type:* Amazon.CDK.AWS.IAM.IGrantable

---
"
`;

exports[`java snapshot 1`] = `
Object {
  "default": undefined,
  "displayName": "grantee",
  "docs": Object {},
  "fqn": "software.amazon.awscdk.services.ecr.AuthorizationToken.grantRead.parameter.grantee",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
  "optional": undefined,
  "type": Object {
    "formattingPattern": "%",
    "types": Array [
      Object {
        "displayName": "IGrantable",
        "fqn": "software.amazon.awscdk.services.iam.IGrantable",
        "id": "@aws-cdk/aws-iam.IGrantable",
        "packageName": "@aws-cdk/aws-iam",
        "packageVersion": "1.106.0",
        "submodule": undefined,
      },
    ],
  },
}
`;

exports[`java snapshot 2`] = `
" \`grantee\`<sup>Required</sup> <a name=\\"grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee\\"></a>

- *Type:* software.amazon.awscdk.services.iam.IGrantable

---
"
`;

exports[`newlines in "defaults" are removed 1`] = `
" \`grantee\`<sup>Required</sup> <a name=\\"grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee\\"></a>

- *Type:* @aws-cdk/aws-iam.IGrantable
- *Default:* default option with a newline

---
"
`;

exports[`python snapshot 1`] = `
Object {
  "default": undefined,
  "displayName": "grantee",
  "docs": Object {},
  "fqn": "aws_cdk.aws_ecr.AuthorizationToken.grant_read.parameter.grantee",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
  "optional": undefined,
  "type": Object {
    "formattingPattern": "%",
    "types": Array [
      Object {
        "displayName": "IGrantable",
        "fqn": "aws_cdk.aws_iam.IGrantable",
        "id": "@aws-cdk/aws-iam.IGrantable",
        "packageName": "@aws-cdk/aws-iam",
        "packageVersion": "1.106.0",
        "submodule": undefined,
      },
    ],
  },
}
`;

exports[`python snapshot 2`] = `
" \`grantee\`<sup>Required</sup> <a name=\\"grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee\\"></a>

- *Type:* aws_cdk.aws_iam.IGrantable

---
"
`;

exports[`typescript snapshot 1`] = `
Object {
  "default": undefined,
  "displayName": "grantee",
  "docs": Object {},
  "fqn": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
  "optional": undefined,
  "type": Object {
    "formattingPattern": "%",
    "types": Array [
      Object {
        "displayName": "IGrantable",
        "fqn": "@aws-cdk/aws-iam.IGrantable",
        "id": "@aws-cdk/aws-iam.IGrantable",
        "packageName": "@aws-cdk/aws-iam",
        "packageVersion": "1.106.0",
        "submodule": undefined,
      },
    ],
  },
}
`;

exports[`typescript snapshot 2`] = `
" \`grantee\`<sup>Required</sup> <a name=\\"grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee\\"></a>

- *Type:* @aws-cdk/aws-iam.IGrantable

---
"
`;
